fix IDE warnings, use Java 7, 8 features